--- a/weather.html
+++ b/weather.html
@@ -14,8 +14,8 @@
       <div class="current-info">
         <!-- Date time info -->
         <div class="time-date-container" id="time-date-container">
-          <div class="time" id="time">10:36 </div>
-          <div class="date" id="date">Friday, 17 February</div>
+          <div class="time" id="time">10:36</div>
+          <div class="date" id="date"></div>
           <!-- Other weather info -->
           <div class="others-info" id="current-weather-items">
             <div class="weather-items">
