current info updated

--- a/weather.html
+++ b/weather.html
@@ -17,20 +17,7 @@
           <div class="time" id="time">10:36</div>
           <div class="date" id="date"></div>
           <!-- Other weather info -->
-          <div class="others-info" id="current-weather-items">
-            <div class="weather-items">
-              <div>Humidity</div>
-              <div>95.2%</div>
-            </div>
-            <div class="weather-items">
-              <div>Pressure</div>
-              <div>121</div>
-            </div>
-            <div class="weather-items">
-              <div>Wind speed</div>
-              <div>222</div>
-            </div>
-          </div>
+          <div class="others-info" id="current-weather-items"></div>
         </div>
         <div class="place">
           <div class="time-zone" id="time-zone">
